# CV_RL_LunarLander

./: .gitignore  LICENSE  README.md  evaluate_rl.py  pyproject.toml  requirements.txt  train_cv.py  train_rl.py
checkpoints/cv/: README.md
checkpoints/cv/resnet18_pose/: README.md
checkpoints/rl/: README.md
checkpoints/rl/sb3_dqn/: README.md
data/cv_integrations/: README.md
data/cv_integrations/full_state/: README.md  metadata.json
data/cv_integrations/x_y/: README.md  metadata.json
data/cv_integrations/x_y_theta/: README.md  metadata.json
data/cv_integrations/x_y_theta_velocity/: README.md  metadata.json
notebooks/00_data/: 01_generate_images.ipynb  README.md
notebooks/01_cv/: 01_train_resnet_pose.ipynb  README.md
notebooks/02_rl/: README.md
notebooks/03_experiments/: README.md
src/: README.md
src/lunar_lander_cvrl/: __init__.py  envs.py  vision.py  visualization.py
src/lunar_lander_cvrl/models/: README.md
src/lunar_lander_cvrl/models/cv/: README.md  __init__.py  custom_cnn.py  resnet18_pose.py
src/lunar_lander_cvrl/models/rl/: README.md  __init__.py  custom_dqn.py  sb3_dqn.py
