[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lunar-lander-cvrl"
version = "0.1.0"
description = "Computer-vision-driven reinforcement learning experiments for LunarLander."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
